--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/estilos.css">
-    <title>Inicio</title>
+    <title>Inicio - enelHYPE</title>
+    <meta name="description" content="Envíos gratis a todo el país. EnelHYPE AR. Tienda ·">
+    <meta name="author" content="Lucas Bertuzzi">
+    <meta name="copyrigth" content="enelHYPE">
+    <meta property="0g:title" content="enelHYPE">
+    <meta property="0g:description" content="Envíos gratis a todo el país. EnelHYPE AR. Tienda ·" >
+    <meta property="0g:img" content="">
+    <meta property="0g:url" content="">
+    <meta property="0g:locale" content="es_Es">
+    >
 </head>
-<body>
 
+<body>
  <header>
     <nav class="navbar navbar-expand-lg navbar-light FondoNav">
         <div class="container-fluid">
@@ -55,39 +64,39 @@
    </div>
    <div class="grid-index">
       <article>
-        <img src="./img/ADIDAS YEEZY BOOST 700.jpg" class="border" alt="zapatillas adidas yeezy bost 700" data-aos="flip-up">
+        <img src="./img/ADIDAS YEEZY BOOST 700.jpg" loading="lazy" class="border" alt="zapatillas adidas yeezy bost 700" data-aos="flip-up">
         <p class="text-p">Adidas Yeezy Boost 700</p>
       </article>
       <article>
-        <img src="./img/AIR JORDAN 1 LOW ROYAL YELLOW.jpg" class="border" alt="zapatillas AIR JORDAN 1 LOW ROYAL YELLOW" data-aos="flip-up">
+        <img src="./img/AIR JORDAN 1 LOW ROYAL YELLOW.jpg" loading="lazy" class="border" alt="zapatillas AIR JORDAN 1 LOW ROYAL YELLOW" data-aos="flip-up">
         <p class="text-p">Air Jordan 1 Low Royal Yellow</p>
       </article>
       <article>
-        <img src="./img/AIR JORDAN 1 MID BARELY ROSE.jpg" class="border" alt="zapatillas AIR JORDAN 1 MID BARELY ROSE" data-aos="flip-up">
+        <img src="./img/AIR JORDAN 1 MID BARELY ROSE.jpg" loading="lazy" class="border" alt="zapatillas AIR JORDAN 1 MID BARELY ROSE" data-aos="flip-up">
         <p class="text-p">Air Jordan 1 Mid Barely Rose</p>
       </article>
       <article>
-        <img src="./img/NIKE AIR FORCE 1 LOW SKELETON ORANGE.jpg" class="border" alt="zapatillas AIR FORCE 1 LOW SKELETON ORANGE" data-aos="flip-up">
+        <img src="./img/NIKE AIR FORCE 1 LOW SKELETON ORANGE.jpg" loading="lazy" class="border" alt="zapatillas AIR FORCE 1 LOW SKELETON ORANGE" data-aos="flip-up">
         <p class="text-p">Nike Air Force 1 Low Skeleton orange</p>
       </article>
       <article>
-          <img src="./img/NIKE BIG SWOOSH JACKET.jpg" class="border" alt="campera NIKE BIG SWOOSH JACKET" data-aos="flip-up">
+          <img src="./img/NIKE BIG SWOOSH JACKET.jpg" loading="lazy" class="border" alt="campera NIKE BIG SWOOSH JACKET" data-aos="flip-up">
           <p class="text-p">Nike big Swoosh Jacket</p>
       </article>
       <article>
-          <img src="./img/NIKE DUNK LOW RETRO WHITE BLACK.jpg" class="border" alt="zapatillas NIKE DUNK LOW RETRO WHITE BLACK" data-aos="flip-up">
+          <img src="./img/NIKE DUNK LOW RETRO WHITE BLACK.jpg" loading="lazy" class="border" alt="zapatillas NIKE DUNK LOW RETRO WHITE BLACK" data-aos="flip-up">
           <p class="text-p">Nike Dunk Low Retro White Black</p>
       </article>
       <article>
-          <img src="./img/NIKE X AMBUSH NBA.jpg" class="border" alt="pantalon NIKE X AMBUSH NBA" data-aos="flip-up">
+          <img src="./img/NIKE X AMBUSH NBA.jpg" loading="lazy" class="border" alt="pantalon NIKE X AMBUSH NBA" data-aos="flip-up">
           <p class="text-p">Pantalon Nike x Ambush NBA</p>
       </article>
       <article>
-        <img src="./img/NIKE AIR FORCE 1 LOW JUST DO IT.jpg" class="border" alt="zapatillas air force just do it" data-aos="flip-up">
+        <img src="./img/NIKE AIR FORCE 1 LOW JUST DO IT.jpg" loading="lazy" class="border" alt="zapatillas air force just do it" data-aos="flip-up">
         <p class="text-p">Nike Air Foirce 1 Low Just Do It</p>
       </article>
       <article>
-        <img src="./img/NIKE DUNK LOW SB BLUE FURY.jpg" class="border" alt="zapatillas NIKE DUNK LOW SB BLUE FURY" data-aos="flip-up">
+        <img src="./img/NIKE DUNK LOW SB BLUE FURY.jpg" loading="lazy" class="border" alt="zapatillas NIKE DUNK LOW SB BLUE FURY" data-aos="flip-up">
         <p class="text-p">Nike Dunk Low SB Blue Fury</p>
       </article>
     </div>
