--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/estilos.css">
-    <title>Contacto</title>
+    <title>Contacto - enelHYPE</title>
+    <meta name="description" content="Encontranos en instagram @enelHYPE. Local ubicado en Palermo">
+    <meta name="author" content="Lucas Bertuzzi">
+    <meta name="copyrigth" content="enelHYPE">
+    <meta property="0g:title" content="enelHYPE">
+    <meta property="0g:description" content="Encontranos en instagram @enelHYPE. Local ubicado en Palermo" >
+    <meta property="0g:img" content="">
+    <meta property="0g:url" content="">
+    <meta property="0g:locale" content="es_Es">
 </head>
 <body>
     <header>
