--- a/sections/nosotros.html
+++ b/sections/nosotros.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/estilos.css">
-    <title>Nosotros</title>
+    <title>Nosotros - enelHYPE</title>
+    <meta name="description" content="Somos una empresa joven amantes de la indumentaria HYPE">
+    <meta name="author" content="Lucas Bertuzzi">
+    <meta name="copyrigth" content="enelHYPE">
+    <meta property="0g:title" content="enelHYPE">
+    <meta property="0g:description" content="Somos una empresa joven amantes de la indumentaria HYPE" >
+    <meta property="0g:img" content="">
+    <meta property="0g:url" content="">
+    <meta property="0g:locale" content="es_Es">
 </head>
 <body>
     <header>
@@ -42,12 +50,12 @@
 
     <main>
         <p class="nosotros">
-            Quienes Somos?<br>
+            Quienes Somos?
 
             Somos una empresa joven amantes de la indumentaria HYPE, que importa prendas de Calidad.
             Nuestro objetivo es que ustedes tengan al alcance de sus manos aquellos
             productos que siempre quisieron, brindando máxima seguridad.
-            <br>
+            
             No negociamos la excelencia, solo tratamos de acercarnos a ella.
         </p>
     </main>
