--- a/sections/productos.html
+++ b/sections/productos.html
@@ -7,7 +7,15 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/estilos.css">
-    <title>Productos</title>
+    <title>Productos - enelHYPE</title>
+    <meta name="description" content="Todos nuestros productos son importados, sellados y de calidad prémium">
+    <meta name="author" content="Lucas Bertuzzi">
+    <meta name="copyrigth" content="enelHYPE">
+    <meta property="0g:title" content="enelHYPE">
+    <meta property="0g:description" content="Todos nuestros productos son importados, sellados y de calidad prémium" >
+    <meta property="0g:img" content="">
+    <meta property="0g:url" content="">
+    <meta property="0g:locale" content="es_Es">
 </head>
 <body>
     <header>
@@ -44,67 +52,67 @@
     <main>
         <div class="grid">
           <article>
-              <img class="border" src="../img/bolsa drew.jpg" alt="bolsa de compras drew" data-aos="flip-up">
+              <img class="border" src="../img/bolsa drew.jpg" loading="lazy" alt="bolsa de compras drew" data-aos="flip-up">
               <p>Drew Bag</p>
           </article>
           <article>
-             <img class="border" src="../img/buzo drew.jpg" alt="buzo drew" data-aos="flip-up">
+             <img class="border" src="../img/buzo drew.jpg" loading="lazy" alt="buzo drew" data-aos="flip-up">
              <p>Hoodie Drew Black</p>
           </article>
           <article>
-             <img class="border" src="../img/buzo essential.jpg" alt="buzo essential" data-aos="flip-up">
+             <img class="border" src="../img/buzo essential.jpg" loading="lazy" alt="buzo essential" data-aos="flip-up">
              <p>Essential Hoodie Desert</p>
           </article>
           <article>
-             <img class="border" src="../img/Jordan-1-Mid-Barely-Orange-Light-Violet-W-1.jpg" alt="jordan 1 barely orange" data-aos="flip-up">
+             <img class="border" src="../img/Jordan-1-Mid-Barely-Orange-Light-Violet-W-1.jpg" loading="lazy" alt="jordan 1 barely orange" data-aos="flip-up">
              <p>Jordan 1 Mid Barely Orange</p>
           </article>
           <article>
-             <img class="border" src="../img/Jordan-1-Retro-High-OG-Atmosphere-W.jpg" alt="jordan 1 retro og" data-aos="flip-up">
+             <img class="border" src="../img/Jordan-1-Retro-High-OG-Atmosphere-W.jpg" loading="lazy" alt="jordan 1 retro og" data-aos="flip-up">
              <p>Jordan 1 Retro High OG</p>
           </article> 
           <article>
-             <img class="border" src="../img/Jordan-1-Retro-High-White-University-Blue-Black.jpg" alt="jordan 1 retro white university" data-aos="flip-up">
+             <img class="border" src="../img/Jordan-1-Retro-High-White-University-Blue-Black.jpg" loading="lazy" alt="jordan 1 retro white university" data-aos="flip-up">
              <p>Jordan 1 Retro High White University</p>
           </article>
           <article>
-             <img class="border" src="../img/Jordan-4-Retro-Blank-Canvas-W.jpg" alt="jordan 4 blank canvas" data-aos="flip-up">
+             <img class="border" src="../img/Jordan-4-Retro-Blank-Canvas-W.jpg" loading="lazy" alt="jordan 4 blank canvas" data-aos="flip-up">
              <p>Jordan 4 Retro Blank Canvas</p>
           </article> 
           <article>
-             <img class="border" src="../img/Jordan-4-Retro-Lightning-2021.jpg" alt="jordan 4 lightning" data-aos="flip-up">
+             <img class="border" src="../img/Jordan-4-Retro-Lightning-2021.jpg" loading="lazy" alt="jordan 4 lightning" data-aos="flip-up">
              <p>Jordan 4 Retro Lightning</p>
           </article>
           <article>
-             <img class="border" src="../img/Jordan-4-Retro-University-Blue.jpg" alt="jordan 4 university" data-aos="flip-up">
+             <img class="border" src="../img/Jordan-4-Retro-University-Blue.jpg" loading="lazy" alt="jordan 4 university" data-aos="flip-up">
              <p>Jordan 4 Retro University Blue</p>
           </article>
           <article>
-             <img src="../img/ADIDAS YEEZY BOOST 700.jpg" class="border" alt="zapatillas adidas yeezy bost 700" data-aos="flip-up">
+             <img src="../img/ADIDAS YEEZY BOOST 700.jpg" loading="lazy" class="border" alt="zapatillas adidas yeezy bost 700" data-aos="flip-up">
              <p>Adidas Yeezy Boost 700</p>
           </article>
           <article>
-             <img src="../img/AIR JORDAN 1 LOW ROYAL YELLOW.jpg" class="border" alt="zapatillas AIR JORDAN 1 LOW ROYAL YELLOW" data-aos="flip-up">
+             <img src="../img/AIR JORDAN 1 LOW ROYAL YELLOW.jpg" loading="lazy" class="border" alt="zapatillas AIR JORDAN 1 LOW ROYAL YELLOW" data-aos="flip-up">
              <p>Air Jordan 1 Low Royal Yellow</p>
           </article>
           <article>
-             <img src="../img/AIR JORDAN 1 MID BARELY ROSE.jpg" class="border" alt="zapatillas AIR JORDAN 1 MID BARELY ROSE" data-aos="flip-up">
+             <img src="../img/AIR JORDAN 1 MID BARELY ROSE.jpg" loading="lazy" class="border" alt="zapatillas AIR JORDAN 1 MID BARELY ROSE" data-aos="flip-up">
              <p>Air Jordan 1 Mid Barely Rose</p>
           </article>
           <article>
-             <img src="../img/NIKE AIR FORCE 1 LOW SKELETON ORANGE.jpg" class="border" alt="zapatillas AIR FORCE 1 LOW SKELETON ORANGE" data-aos="flip-up">
+             <img src="../img/NIKE AIR FORCE 1 LOW SKELETON ORANGE.jpg" loading="lazy" class="border" alt="zapatillas AIR FORCE 1 LOW SKELETON ORANGE" data-aos="flip-up">
              <p>Nike Air Force 1 Low Skeleton orange</p>
           </article>
           <article>
-             <img src="../img/NIKE BIG SWOOSH JACKET.jpg" class="border" alt="campera NIKE BIG SWOOSH JACKET" data-aos="flip-up">
+             <img src="../img/NIKE BIG SWOOSH JACKET.jpg" loading="lazy" class="border" alt="campera NIKE BIG SWOOSH JACKET" data-aos="flip-up">
              <p>Nike big Swoosh Jacket</p>
           </article>
           <article>
-             <img src="../img/NIKE DUNK LOW RETRO WHITE BLACK.jpg" class="border" alt="zapatillas NIKE DUNK LOW RETRO WHITE BLACK" data-aos="flip-up">
+             <img src="../img/NIKE DUNK LOW RETRO WHITE BLACK.jpg" loading="lazy" class="border" alt="zapatillas NIKE DUNK LOW RETRO WHITE BLACK" data-aos="flip-up">
              <p>Nike Dunk Low Retro White Black</p>
           </article>
           <article>
-             <img src="../img/NIKE X AMBUSH NBA.jpg" class="border" alt="pantalon NIKE X AMBUSH NBA" data-aos="flip-up">
+             <img src="../img/NIKE X AMBUSH NBA.jpg" loading="lazy" class="border" alt="pantalon NIKE X AMBUSH NBA" data-aos="flip-up">
              <p>Pantalon Nike x Ambush NBA</p>
           </article>
        </div>
